--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,3 +1,11 @@
 [user]
 	name = isopets
 	email = jandp.0717@gmail.com
+[core]
+	pager = delta
+[interactive]
+	diffFilter = delta --color-only
+[delta]
+	navigate = true
+	line-numbers = true
+	side-by-side = true
