--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -1,18 +1,370 @@
 tap "koekeishiya/formulae"
+tap "snyk/tap"
 brew "bat"
 brew "bitwarden-cli"
 brew "btop"
+brew "direnv"
 brew "dust"
 brew "eza"
 brew "fd"
 brew "fzf"
 brew "git-delta"
+brew "gnu-sed"
 brew "jq"
 brew "lazygit"
 brew "ripgrep"
+brew "sheldon"
 brew "tealdeer"
 brew "tmux"
+brew "trivy"
 brew "zoxide"
 brew "koekeishiya/formulae/skhd"
 brew "koekeishiya/formulae/yabai", args: ["HEAD"]
+brew "snyk/tap/snyk"
 cask "font-hack-nerd-font"
+vscode "4ops.terraform"
+vscode "766b.go-outliner"
+vscode "aaron-bond.better-comments"
+vscode "actboy168.lua-debug"
+vscode "adpyke.vscode-sql-formatter"
+vscode "aeschli.vscode-css-formatter"
+vscode "ahmadawais.shades-of-purple"
+vscode "akamud.vscode-theme-onedark"
+vscode "alefragnani.bookmarks"
+vscode "alefragnani.project-manager"
+vscode "alexcvzz.vscode-sqlite"
+vscode "alexisvt.flutter-snippets"
+vscode "amandeepmittal.pug"
+vscode "amazonwebservices.aws-toolkit-vscode"
+vscode "amiralizadeh9480.laravel-extra-intellisense"
+vscode "angular.ng-template"
+vscode "anseki.vscode-color"
+vscode "aquasecurityofficial.trivy-vulnerability-scanner"
+vscode "arah24.moon"
+vscode "asvetliakov.vscode-neovim"
+vscode "austenc.laravel-blade-spacer"
+vscode "batisteo.vscode-django"
+vscode "bibhasdn.django-snippets"
+vscode "bierner.markdown-checkbox"
+vscode "bierner.markdown-emoji"
+vscode "bierner.markdown-footnotes"
+vscode "bierner.markdown-image-size"
+vscode "bierner.markdown-mermaid"
+vscode "bierner.markdown-preview-github-styles"
+vscode "bitwisecook.tcl"
+vscode "bmewburn.vscode-intelephense-client"
+vscode "bradlc.vscode-tailwindcss"
+vscode "bung87.rails"
+vscode "bung87.vscode-gemfile"
+vscode "burkeholland.simple-react-snippets"
+vscode "castwide.solargraph"
+vscode "chris-noring.node-snippets"
+vscode "christian-kohler.npm-intellisense"
+vscode "christian-kohler.path-intellisense"
+vscode "codestream.codestream"
+vscode "codezombiech.gitignore"
+vscode "codingyu.laravel-goto-view"
+vscode "cschlosser.doxdocgen"
+vscode "csstools.postcss"
+vscode "ctf0.laravel-goto-controller"
+vscode "damianbal.vs-phpclassgen"
+vscode "damms005.devdb"
+vscode "danielpinto8zz6.c-cpp-compile-run"
+vscode "dart-code.dart-code"
+vscode "dart-code.flutter"
+vscode "davidanson.vscode-markdownlint"
+vscode "dbaeumer.vscode-eslint"
+vscode "denoland.vscode-deno"
+vscode "dhoeric.ansible-vault"
+vscode "digitalbrainstem.javascript-ejs-support"
+vscode "donjayamanne.jquerysnippets"
+vscode "donjayamanne.python-environment-manager"
+vscode "donjayamanne.python-extension-pack"
+vscode "dotjoshjohnson.xml"
+vscode "dracula-theme.theme-dracula"
+vscode "dsznajder.es7-react-js-snippets"
+vscode "dustypomerleau.rust-syntax"
+vscode "eamodio.gitlens"
+vscode "ecmel.vscode-html-css"
+vscode "editorconfig.editorconfig"
+vscode "esbenp.prettier-vscode"
+vscode "exiasr.hadolint"
+vscode "fallenmax.mithril-emmet"
+vscode "federicovarela.pipenv-scripts"
+vscode "felipecaputo.git-project-manager"
+vscode "figma.figma-vscode-extension"
+vscode "firefox-devtools.vscode-firefox-debug"
+vscode "formulahendry.auto-complete-tag"
+vscode "formulahendry.auto-rename-tag"
+vscode "formulahendry.docker-explorer"
+vscode "formulahendry.docker-extension-pack"
+vscode "foxundermoon.next-js"
+vscode "franneck94.c-cpp-runner"
+vscode "funkyremi.vscode-google-translate"
+vscode "gencer.html-slim-scss-css-class-completion"
+vscode "george3447.docker-run"
+vscode "georgewfraser.vscode-javac"
+vscode "gimly81.fortran"
+vscode "github.codespaces"
+vscode "github.copilot"
+vscode "github.copilot-chat"
+vscode "github.github-vscode-theme"
+vscode "github.remotehub"
+vscode "github.vscode-codeql"
+vscode "github.vscode-github-actions"
+vscode "github.vscode-pull-request-github"
+vscode "gitpod.gitpod-desktop"
+vscode "gitpod.gitpod-remote-ssh"
+vscode "glenn2223.live-sass"
+vscode "glitchbl.laravel-create-view"
+vscode "golang.go"
+vscode "grapecity.gc-excelviewer"
+vscode "graphql.vscode-graphql"
+vscode "graphql.vscode-graphql-syntax"
+vscode "groksrc.ruby"
+vscode "gruntfuggly.todo-tree"
+vscode "hackmd.vscode-hackmd"
+vscode "hansec.fortran-ls"
+vscode "hashicorp.terraform"
+vscode "hbenl.vscode-test-explorer"
+vscode "hediet.vscode-drawio"
+vscode "henriiik.docker-linter"
+vscode "hollowtree.vue-snippets"
+vscode "hoovercj.ruby-linter"
+vscode "hridoy.rails-snippets"
+vscode "hridoy.wordpress"
+vscode "huizhou.githd"
+vscode "humao.rest-client"
+vscode "hwencc.html-tag-wrapper"
+vscode "ibm.output-colorizer"
+vscode "icrawl.discord-vscode"
+vscode "ihunte.laravel-blade-wrapper"
+vscode "ionutvmi.path-autocomplete"
+vscode "ipedrazas.kubernetes-snippets"
+vscode "irongeek.vscode-env"
+vscode "ironmansoftware.powershell-universal"
+vscode "ironmansoftware.powershellprotools"
+vscode "james-yu.latex-workshop"
+vscode "janisdd.vscode-edit-csv"
+vscode "jasonnutter.search-node-modules"
+vscode "jawandarajbir.react-vscode-extension-pack"
+vscode "jebbs.plantuml"
+vscode "jeff-hykin.better-cpp-syntax"
+vscode "johnpapa.angular2"
+vscode "johnpapa.vscode-peacock"
+vscode "johnpapa.winteriscoming"
+vscode "jscearcy.rust-doc-viewer"
+vscode "justusadam.language-haskell"
+vscode "kelvin.vscode-sshfs"
+vscode "kevinrose.vsc-python-indent"
+vscode "keyring.lua"
+vscode "kgrzywocz.wsl-path"
+vscode "kisstkondoros.vscode-codemetrics"
+vscode "kleber-swf.unity-code-snippets"
+vscode "kreativ-software.csharpextensions"
+vscode "kumar-harsh.graphql-for-vscode"
+vscode "laurencebahiirwa.deno-std-lib-snippets"
+vscode "leizongmin.node-module-intellisense"
+vscode "lfurzewaddock.vscode-wsl-workspacefolder"
+vscode "lunuan.kubernetes-templates"
+vscode "magicstack.magicpython"
+vscode "manasxx.background-cover"
+vscode "marcelovelasquez.flutter-tree"
+vscode "mark-tucker.aws-cli-configure"
+vscode "mathiasfrohlich.kotlin"
+vscode "mattiasbaake.vscode-snippets-for-ansible"
+vscode "mdickin.markdown-shortcuts"
+vscode "mechatroner.rainbow-csv"
+vscode "mehedidracula.php-constructor"
+vscode "mgmcdermott.vscode-language-babel"
+vscode "mhutchie.git-graph"
+vscode "michelemelluso.code-beautifier"
+vscode "miguel-savignano.ruby-symbols"
+vscode "miguelsolorio.fluent-icons"
+vscode "mikestead.dotenv"
+vscode "mikhail-arkhipov.r"
+vscode "mindaro-dev.file-downloader"
+vscode "mintlify.document"
+vscode "miramac.vscode-exec-node"
+vscode "misogi.ruby-rubocop"
+vscode "mitaki28.vscode-clang"
+vscode "mongodb.mongodb-vscode"
+vscode "monokai.theme-monokai-pro-vscode"
+vscode "mosapride.zenkaku"
+vscode "mrmlnc.vscode-apache"
+vscode "mrmlnc.vscode-autoprefixer"
+vscode "mrmlnc.vscode-duplicate"
+vscode "mrmlnc.vscode-pugbeautify"
+vscode "mrmlnc.vscode-scss"
+vscode "ms-azuretools.vscode-azureappservice"
+vscode "ms-azuretools.vscode-azurecontainerapps"
+vscode "ms-azuretools.vscode-azurefunctions"
+vscode "ms-azuretools.vscode-azureresourcegroups"
+vscode "ms-azuretools.vscode-azurestaticwebapps"
+vscode "ms-azuretools.vscode-azurestorage"
+vscode "ms-azuretools.vscode-azurevirtualmachines"
+vscode "ms-azuretools.vscode-cosmosdb"
+vscode "ms-azuretools.vscode-docker"
+vscode "ms-ceintl.vscode-language-pack-ja"
+vscode "ms-kubernetes-tools.kind-vscode"
+vscode "ms-kubernetes-tools.vscode-aks-tools"
+vscode "ms-kubernetes-tools.vscode-kubernetes-tools"
+vscode "ms-mssql.data-workspace-vscode"
+vscode "ms-mssql.mssql"
+vscode "ms-mssql.sql-bindings-vscode"
+vscode "ms-mssql.sql-database-projects-vscode"
+vscode "ms-python.debugpy"
+vscode "ms-python.python"
+vscode "ms-python.vscode-pylance"
+vscode "ms-toolsai.jupyter"
+vscode "ms-toolsai.jupyter-keymap"
+vscode "ms-toolsai.jupyter-renderers"
+vscode "ms-toolsai.vscode-jupyter-cell-tags"
+vscode "ms-toolsai.vscode-jupyter-slideshow"
+vscode "ms-vscode-remote.remote-containers"
+vscode "ms-vscode-remote.remote-ssh"
+vscode "ms-vscode-remote.remote-ssh-edit"
+vscode "ms-vscode-remote.remote-wsl"
+vscode "ms-vscode-remote.vscode-remote-extensionpack"
+vscode "ms-vscode.azure-repos"
+vscode "ms-vscode.azurecli"
+vscode "ms-vscode.cmake-tools"
+vscode "ms-vscode.cpptools"
+vscode "ms-vscode.cpptools-extension-pack"
+vscode "ms-vscode.cpptools-themes"
+vscode "ms-vscode.hexeditor"
+vscode "ms-vscode.makefile-tools"
+vscode "ms-vscode.mono-debug"
+vscode "ms-vscode.powershell"
+vscode "ms-vscode.remote-explorer"
+vscode "ms-vscode.remote-repositories"
+vscode "ms-vscode.remote-server"
+vscode "ms-vscode.test-adapter-converter"
+vscode "ms-vscode.vscode-node-azure-pack"
+vscode "ms-vscode.vscode-serial-monitor"
+vscode "ms-vscode.vscode-typescript-next"
+vscode "ms-vsliveshare.vsliveshare"
+vscode "msjsdiag.vscode-react-native"
+vscode "msyrus.go-doc"
+vscode "mtxr.sqltools"
+vscode "mushan.vscode-paste-image"
+vscode "naoray.laravel-goto-components"
+vscode "naumovs.color-highlight"
+vscode "neilbrayfield.php-docblocker"
+vscode "nikolapaunovic.tkinter-snippets"
+vscode "njpwerner.autodocstring"
+vscode "nodesource.vscode-for-node-js-development-pack"
+vscode "octref.vetur"
+vscode "oderwat.indent-rainbow"
+vscode "okteto.remote-kubernetes"
+vscode "onecentlin.laravel-blade"
+vscode "onecentlin.laravel-extension-pack"
+vscode "onecentlin.laravel5-snippets"
+vscode "orta.vscode-jest"
+vscode "p1c2u.docker-compose"
+vscode "pflannery.vscode-versionlens"
+vscode "pgl.laravel-jump-controller"
+vscode "pizzacat83.codic"
+vscode "pkief.material-icon-theme"
+vscode "pkief.material-product-icons"
+vscode "pkosta2005.heroku-command"
+vscode "platformio.platformio-ide"
+vscode "pomdtr.excalidraw-editor"
+vscode "pranaygp.vscode-css-peek"
+vscode "premparihar.gotestexplorer"
+vscode "pulkitgangwar.nextjs-snippets"
+vscode "rafaelmaiolla.remote-vscode"
+vscode "rangav.vscode-thunder-client"
+vscode "rashwell.tcl"
+vscode "rdebugger.r-debugger"
+vscode "redhat.ansible"
+vscode "redhat.java"
+vscode "redhat.vscode-commons"
+vscode "redhat.vscode-rsp-ui"
+vscode "redhat.vscode-xml"
+vscode "redhat.vscode-yaml"
+vscode "reditorsupport.r"
+vscode "rifi2k.format-html-in-php"
+vscode "ritwickdey.liveserver"
+vscode "robert-brunhage.flutter-riverpod-snippets"
+vscode "rogalmic.bash-debug"
+vscode "run-at-scale.terraform-doc-snippets"
+vscode "rust-lang.rust-analyzer"
+vscode "ryannaddy.laravel-artisan"
+vscode "ryu1kn.partial-diff"
+vscode "samuelcolvin.jinjahtml"
+vscode "samverschueren.final-newline"
+vscode "sdras.night-owl"
+vscode "sdras.vue-vscode-snippets"
+vscode "shd101wyy.markdown-preview-enhanced"
+vscode "shopify.ruby-lsp"
+vscode "shufo.vscode-blade-formatter"
+vscode "sianglim.slim"
+vscode "sibiraj-s.vscode-scss-formatter"
+vscode "sidthesloth.html5-boilerplate"
+vscode "snyk-security.snyk-vulnerability-scanner"
+vscode "soerenuhrbach.vscode-deepl"
+vscode "sonarsource.sonarlint-vscode"
+vscode "sozercan.slack"
+vscode "statelyai.stately-vscode"
+vscode "steoates.autoimport"
+vscode "streetsidesoftware.code-spell-checker"
+vscode "sumneko.lua"
+vscode "swellaby.rust-pack"
+vscode "syler.sass-indented"
+vscode "tamasfe.even-better-toml"
+vscode "techer.open-in-browser"
+vscode "tfsec.tfsec"
+vscode "thekalinga.bootstrap4-vscode"
+vscode "thiscodeworks.savecode"
+vscode "timonwong.shellcheck"
+vscode "toba.vsfire"
+vscode "tobiah.unity-tools"
+vscode "tombonnike.vscode-status-bar-format-toggle"
+vscode "tomoki1207.pdf"
+vscode "tomsaunders.vscode-workspace-explorer"
+vscode "twxs.cmake"
+vscode "vadimcn.vscode-lldb"
+vscode "vayan.haml"
+vscode "vincaslt.highlight-matching-tag"
+vscode "vintharas.learn-vim"
+vscode "vmware.vscode-boot-dev-pack"
+vscode "vmware.vscode-spring-boot"
+vscode "vortizhe.simple-ruby-erb"
+vscode "vscjava.vscode-gradle"
+vscode "vscjava.vscode-java-debug"
+vscode "vscjava.vscode-java-dependency"
+vscode "vscjava.vscode-java-pack"
+vscode "vscjava.vscode-java-test"
+vscode "vscjava.vscode-maven"
+vscode "vscjava.vscode-spring-boot-dashboard"
+vscode "vscjava.vscode-spring-initializr"
+vscode "vscode-icons-team.vscode-icons"
+vscode "vscodevim.vim"
+vscode "vsls-contrib.gitdoc"
+vscode "vue.volar"
+vscode "waderyan.gitblame"
+vscode "walkme.ruby-extension-pack"
+vscode "wallabyjs.quokka-vscode"
+vscode "wayou.vscode-todo-highlight"
+vscode "webfreak.debug"
+vscode "whatwedo.twig"
+vscode "wholroyd.jinja"
+vscode "wix.vscode-import-cost"
+vscode "wordpresstoolbox.wordpress-toolbox"
+vscode "wscats.eno"
+vscode "wscats.qf"
+vscode "xabikos.javascriptsnippets"
+vscode "xabikos.reactsnippets"
+vscode "xadillax.viml"
+vscode "xdebug.php-debug"
+vscode "xdebug.php-pack"
+vscode "xyz.local-history"
+vscode "yzane.markdown-pdf"
+vscode "yzhang.markdown-all-in-one"
+vscode "zaczero.bootstrap-v4-snippets"
+vscode "zainchen.json"
+vscode "zhuangtongfa.material-theme"
+vscode "zignd.html-css-class-completion"
+vscode "zobo.php-intellisense"
+vscode "zxh404.vscode-proto3"
