--- a/vscode/profiles/[Base] Common/settings.json
+++ b/vscode/profiles/[Base] Common/settings.json
@@ -1,3 +1,4 @@
+// 🛑 DO NOT EDIT! Managed by Dotfiles.
 {
     "workbench.iconTheme": "material-icon-theme",
     "editor.fontFamily": "'Hack Nerd Font Mono', Menlo, Monaco, 'Courier New', monospace",
