fix: Repair zsh functions and update all scripts to final version

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -10,18 +10,29 @@ brew "fd"
 brew "fzf"
 brew "git-delta"
 brew "gnu-sed"
+brew "gnupg"
 brew "jq"
 brew "lazygit"
+brew "llm"
+brew "mise"
+brew "navi"
+brew "rclone"
 brew "ripgrep"
 brew "sheldon"
+brew "shellcheck"
+brew "starship"
 brew "tealdeer"
 brew "tmux"
 brew "trivy"
+brew "watchexec"
 brew "zoxide"
 brew "koekeishiya/formulae/skhd"
-brew "koekeishiya/formulae/yabai", args: ["HEAD"]
+brew "koekeishiya/formulae/yabai"
 brew "snyk/tap/snyk"
+cask "alacritty"
 cask "font-hack-nerd-font"
+cask "ghostty"
+cask "lulu"
 vscode "4ops.terraform"
 vscode "766b.go-outliner"
 vscode "aaron-bond.better-comments"
@@ -368,3 +379,5 @@ vscode "zhuangtongfa.material-theme"
 vscode "zignd.html-css-class-completion"
 vscode "zobo.php-intellisense"
 vscode "zxh404.vscode-proto3"
+go "cmd/go"
+go "cmd/gofmt"
