chore: Ready for Nix switch

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -10,7 +10,6 @@ brew "eza"
 brew "fd"
 brew "fzf"
 brew "git-delta"
-brew "gnu-sed"
 brew "gnupg"
 brew "jq"
 brew "lazygit"
@@ -31,6 +30,7 @@ brew "koekeishiya/formulae/skhd"
 brew "koekeishiya/formulae/yabai"
 brew "snyk/tap/snyk"
 cask "alacritty"
+cask "bitwarden"
 cask "font-hack-nerd-font"
 cask "ghostty"
 cask "lulu"
