feat(nix): Finalize zsh.nix module migration and add neovim

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-GEMINI_API_KEY=source ~/.zshrc
+# Cockpit Secrets
+# ここにAPIキーを設定します
+export GEMINI_API_KEY="AIzaSyDxT8KoIYE7q7_gyYqf35NCY1T1KDIJ0D4"
